[project]
name = "web-rag-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.24.3",
    "fonttools==4.61.1",
    "fsspec==2026.2.0",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "pillow==12.1.1",
    "pip",
    "pyparsing==3.3.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "setuptools",
    "streamlit>=1.56.0",
    "sympy==1.14.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "wheel",
]

[tool.uv.sources]
pip = { path = "../../../../opt/homebrew/Cellar/python@3.11/3.11.14_2/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ensurepip/_bundled/pip-25.3-py3-none-any.whl" }
setuptools = { path = "../../../../opt/homebrew/Cellar/python@3.11/3.11.14_2/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ensurepip/_bundled/setuptools-80.10.1-py3-none-any.whl" }
wheel = { path = "../../../../opt/homebrew/Cellar/python@3.11/3.11.14_2/libexec/wheel-0.46.3-py3-none-any.whl" }
